--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -35,7 +35,7 @@ install homebrew/dupes/grep
 # install homebrew/dupes/screen
 
 # Install other useful binaries
-install node
+install node --without-npm
 install ant
 
 # Remove outdated versions from the cellar
