--- a/etc/Brewfile
+++ b/etc/Brewfile
@@ -37,6 +37,7 @@ install homebrew/dupes/grep
 # Install other useful binaries
 install node --without-npm
 install ant
+install scala --with-docs
 
 # Remove outdated versions from the cellar
 cleanup
