Change default git user.

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -10,7 +10,7 @@
 [init]
 	#templatedir = ~/.git_template
 [user]
-	email = gneto@pentaho.com
+	email = goncalo.neto@confeur.com
 	name = Gundi
 [core]
 	excludesfile = /Users/gneto/.gitignore
